<resources>
    <string name="app_name">CityShow</string>
    <string name="google_maps_key">AIza</string>
    <string name="let_s_explore_together">Let’s Explore Together!</string>
    <string name="are_you_ready_to_uproot_and_start_over_in_a_new_area_this_app_will_help_you_on_your_journey">Are you ready to uproot and start over in a new area? This app will help you on your journey!</string>
    <string name="login">LogIn</string>
    <string name="signup">SIgnUp</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_to_your_account_to_explore_your_dream_place_to_live_across_the_whole_world">Log In to your account to explore your dream place to live across the whole world!</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="otp_verification">OTP verification</string>
    <string name="please_enter_the_verification_code_sent_on_your_verified_email_address">Please enter the verification code sent on your verified email address</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_verify">OTP verify</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait…</string>
    <string name="create_your_placoo_account_to_explore_your_dream_place_to">Create your CityShow account to explore your dream place to live across the whole world!</string>
    <string name="register_account">Register account</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="home">Home</string>
    <string name="fav">fav</string>
    <string name="add">Add</string>
    <string name="notification">Notifications</string>
    <string name="account">Account</string>
    <string name="no_data_found">No data found</string>
    <string name="trending">Trending</string>
    <string name="submit">Submit</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="select_category">Select category</string>
    <string name="select_sub_category">Select sub category</string>
    <string name="product_images">Product images</string>
    <string name="size">Size</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_original_price">Enter Original price</string>
    <string name="enter_selling_price">Enter selling price</string>
    <string name="enter_brand_name">Enter brand name</string>
    <string name="enter_model_name">Enter model name</string>
    <string name="enter_os">Enter OS</string>
    <string name="warranty_">Warranty?</string>
    <string name="enter_ram">Enter Ram</string>
    <string name="enter_storage">Enter Storage</string>
    <string name="enter_connectivity">Enter Connectivity</string>
    <string name="enter_color">Enter Color</string>
    <string name="enter_material">Enter material</string>
    <string name="enter_gold_weight">Enter Gold weight</string>
    <string name="enter_description">Enter description</string>
    <string name="add_product">Add product</string>
    <string name="general">General</string>
    <string name="my_shops">My Shops</string>
    <string name="subscription">Subscription</string>
    <string name="upgrade_account">Upgrade account</string>
    <string name="other">Others</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="remove_account">Remove Account</string>
    <string name="version">Version</string>
    <string name="cancel_plan">Cancel plan</string>
    <string name="my_product">My Products</string>
    <string name="phone_number">Phone Number</string>
    <string name="child">Child</string>
    <string name="more_details">More details</string>
    <string name="mobile_tablets"><![CDATA[Mobile & Tablets]]></string>
    <string name="size_">Size</string>
    <string name="_10days_return_policy">10Days return policy</string>
    <string name="is_gold">Gold?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="key_feature">Key Feature</string>
    <string name="enter_key_feature">Enter key feature</string>
    <string name="something_went_wrong">Something went wrong,please try after some time</string>
    <string name="enter_your_email_and_you_will_get_new_password_in_your_registred_email_address">Enter your email and you will get new password in your registred email address</string>
    <string name="tag_line">Aaiye khud ko show kare</string>
    <string name="enter_shop_name">Enter shop name</string>
    <string name="enter_shop_address">Enter shop address</string>
    <string name="notes">Notes</string>
    <string name="shop_images">Shop images</string>
    <string name="banner_image">Outdoor Image</string>
    <string name="change_password">Change Password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="select_shop">Select Shop</string>
    <string name="select_product_photos">Select product photos</string>
    <string name="select_product">Select product</string>
    <string name="xxl">XXL</string>
    <string name="xl">XL</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_10">10</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="_150_shops">150+ shops</string>
    <string name="_15_999">15,999</string>
    <string name="_13499">13499</string>
    <string name="cash_on_delivery_available">Cash on Delivery Available</string>
    <string name="no_shop_found">You didn\'t have added shop yet, You can add your shop by click on bottom plus button</string>
    <string name="no_product_found_category">There is no product found for selected category, We will add product for this category shortly, \nThanks</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="products">Products</string>
    <string name="footwear_size">Footwear Size</string>
    <string name="additional_details">More Details?</string>
    <string name="add_discount">Add Discount</string>
    <string name="discount_type">Discount types, IsPrice?</string>
    <string name="offers_discounts"><![CDATA[Offers & Discounts]]></string>
    <string name="rationale_permission">We need your permission to access the media</string>
    <string name="location_rationale_permission">We need your permission to access the location</string>
    <string name="discount">Discount</string>
    <string name="discount_desc">If you want to give flat discount select yes and enter flat amount in discount fields, if you want to give discount in percentage add percentage in discount</string>
    <string name="discount_banner">Discount banner</string>
    <string name="or">Or</string>
    <string name="enter_disount_name">Enter discount name</string>
    <string name="enter_disount_code">Enter discount code</string>
    <string name="enter_discount">Enter discount</string>
    <string name="discounted_products">Discounted Products</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_city">Select city</string>
    <string name="search_cities">Search cities</string>
    <string name="are_you_sure_want_to_delete">Are you sure, want to delete?</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="_100_certified_jwellery">100% certified jewellery</string>
    <string name="available">Available</string>
    <string name="live_demo">Live Demo</string>
    <string name="not_available">Not Available</string>
    <string name="warranty">Warranty</string>
    <string name="emi">EMI</string>
    <string name="enter_colors">Enter colors</string>
    <string name="installation">Installation</string>
    <string name="added">Added</string>
    <string name="self_service">Self Service</string>
    <string name="guaranty">Guaranty</string>
    <string-array name="discount">
        <item>Fixed</item>
        <item>Percentage</item>
    </string-array>
    <string-array name="discount_rate">
        <item>1%</item>
        <item>2%</item>
        <item>3%</item>
        <item>4%</item>
        <item>5%</item>
        <item>6%</item>
        <item>74%</item>
        <item>1%</item>
        <item>1%</item>
        <item>1%</item>
        <item>1%</item>
    </string-array>

    <string name="mobile_accessories"><![CDATA[Mobile &  Accessories]]></string>
    <string name="cloths">Cloths</string>
    <string name="electronics">Electronics</string>
    <string name="kids">Kids</string>
    <string name="home_applience">Home applience</string>
    <string name="Sports">Sports</string>
    <string name="jwellry">Jwellry</string>
    <string name="footwear">Footwear</string>
    <string name="by_upgrading_the_subscription_you_will_get_more_features_and_functions">By upgrading the subscription you will get more features and functions</string>
    <string name="map">Map</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="about_us">About Us</string>
    <string name="active_plan">Active plan</string>
    <string name="no_active_plan">You dont have any active plan, purchase plan and become a shop keeper in CityShow</string>
    <string name="cant_add_more_then">Cant add more then %s images</string>
    <string name="view_more">View more</string>
    <string name="all_categories">All Categories</string>
    <string name="open_time">Open time</string>
    <string name="closed_timer">Closed time</string>
    <string name="purchase">Purchase</string>
    <string name="skip">Skip</string>
</resources>