<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.HomeActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent">

            <com.app.cityshow.views.TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_bold"
                android:text="@string/welcome_back"
                android:textSize="@dimen/_24sdp" />

            <com.app.cityshow.views.TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/log_in_to_your_account_to_explore_your_dream_place_to_live_across_the_whole_world" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvInputEmail"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/colorPrimary">

                <com.app.cityshow.views.EditText
                    android:id="@+id/edtEmail"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvInputPassword"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@android:drawable/ic_lock_lock"
                app:startIconTint="@color/colorPrimary">

                <com.app.cityshow.views.EditText
                    android:id="@+id/edtPassword"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_10sdp"
                android:gravity="center"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                android:padding="@dimen/_10sdp"
                android:text="@string/login" />

            <Button
                android:id="@+id/btnSign"
                style="@style/ButtonStyleRounde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                android:padding="@dimen/_10sdp"
                android:text="@string/signup"
                android:textColor="@color/black" />

            <com.app.cityshow.views.TextView
                android:id="@+id/tvForgot"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/sf_bold"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/forgot_password" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>