<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.HomeActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent">


            <com.app.cityshow.views.TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_bold"
                android:text="@string/otp_verification"
                android:textSize="@dimen/_24sdp" />

            <com.app.cityshow.views.TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/please_enter_the_verification_code_sent_on_your_verified_email_address" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvInputEmail"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_otp"
                app:startIconTint="@color/colorPrimary">

                <com.app.cityshow.views.EditText
                    android:id="@+id/edtEmail"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_otp"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnVerify"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_20sdp"
                android:gravity="center"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                android:padding="@dimen/_10sdp"
                android:text="@string/otp_verify" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>